--- a/DHK.Blazor.Server/DHK.Blazor.Server.csproj
+++ b/DHK.Blazor.Server/DHK.Blazor.Server.csproj
@@ -34,4 +34,12 @@
   <ItemGroup>
     <ProjectReference Include="..\DHK.Module\DHK.Module.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="UnusableNodes.xml">
+      <DependentUpon>Model.xafml</DependentUpon>
+    </None>
+    <None Update="UnusableNodes1.xml">
+      <DependentUpon>Model.xafml</DependentUpon>
+    </None>
+  </ItemGroup>
 </Project>
