Student, Teacher and Program Seeder

--- a/DHK.Blazor.Server/appsettings.json
+++ b/DHK.Blazor.Server/appsettings.json
@@ -1,6 +1,17 @@
 ﻿{
   "ConnectionStrings": {
-    "ConnectionString": "Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\\mssqllocaldb;Initial Catalog=DHK_Service"
+    "TenantHangfire": "Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\\mssqllocaldb;Initial Catalog=DKH",
+    "LocalConnectionString": "Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\\mssqllocaldb;Initial Catalog=DKH",
+    "LocalTenantHangfire": "Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\\mssqllocaldb;Initial Catalog=DKH",
+    "ReportConnectionString": "Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\\mssqllocaldb;Initial Catalog=DKH"
+  },
+  "Services": {
+    "UserName": "Services",
+    "Password": "***REMOVED***",
+    "Tenant": "cict",
+    "LocalUserName": "Services",
+    "LocalPassword": "***REMOVED***",
+    "LocalTenant": "cict"
   },
   "Logging": {
     "LogLevel": {
