--- a/NuGet.config
+++ b/NuGet.config
@@ -76,6 +76,7 @@
       <package pattern="xunit" />
       <package pattern="xunit.*" />
       <package pattern="YamlDotNet" />
+      <package pattern="Aspose.*" />
     </packageSource>
     <packageSource key="DevExpress Server">
       <package pattern="DevExpress.*" />
