--- a/DHK.Blazor.Hangfire/appsettings.json
+++ b/DHK.Blazor.Hangfire/appsettings.json
@@ -103,8 +103,7 @@
   },
   "ClientCredentials": {
     "TenantId": "1698f082-4f59-42ba-a1b9-0f27af851a06",
-    "AppId": "604722b7-0141-444e-aa0c-8ef1489a4808",
-    "SecretValue": "***REMOVED***"
+    "AppId": "604722b7-0141-444e-aa0c-8ef1489a4808"
   },
   "KeyVaultURL": "https://sprinttek-sandbox-v2.vault.azure.net/",
   "Azure": {
